[package]
name = "rust-bmclapi"
version = "1.13.1"
edition = "2021"
authors = ["Pysio <qq593277393@outlook.com>"]
description = "Rust implementation of OpenBMCLAPI"

[dependencies]
# 异步运行时和核心依赖
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "io-util", "sync", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
futures = { version = "0.3", default-features = false, features = ["std"] }

# HTTP服务器和框架
axum = "0.7"
axum-server = { version = "0.6", features = ["tls-rustls"] }
hyper = { version = "1.0", features = ["server", "http1", "http2"] }

# HTTP客户端
reqwest = { version = "0.11", features = ["json", "stream"] }

# SSL/TLS
rustls = "0.22"
rustls-pemfile = "2.0"
rustls-pki-types = "1.0"

# 序列化和解析
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 加密和哈希
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7.0"
hmac = "0.12"
hex = "0.4"
base64 = "0.21"
jsonwebtoken = "8.3"

# 日志和监控
log = "0.4"
env_logger = "0.10"
tracing-appender = "0.2"
indicatif = "0.17"
indicatif-log-bridge = "0.2.3"
colored = "2.0"

# 错误处理
anyhow = "1.0"

# 配置和环境
dotenv = "0.15"

# 数据处理
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
zstd = { version = "0.13", default-features = false }
url = "2.4"

# 工具库
lazy_static = "1.4"

# Socket.IO客户端
rust_socketio = { version = "0.6.0", features = ["async"] }

# UPnP支持
rupnp = { version = "1.1", default-features = false, features = ["tokio"] }
